--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@auth/core": "^0.37.3",
+    "@auth/express": "^0.8.3",
+    "@react-oauth/google": "^0.12.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "connect-mysql2": "^2.2.6",
@@ -8,7 +11,9 @@
     "express": "^4.21.1",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
-    "mysql2": "^3.11.3"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.3",
+    "react-router-dom": "^6.28.0"
   },
   "name": "operation_theatre_management_system",
   "type": "module",
